Make tests compatible with java 8 again